Removed Int helper methods + Leveling + UpgradeState + /building shows time left